# retro-filter-in-python

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  __main__.spec  pyproject.toml
src/: __main__.py  crt.py  image_select.py  smoothstep.py
src/ui/: image_selector.ui  output.py
tests/: test_GUI.py  test_crt.py  test_image_select.py
