[project]
name = "crtifier"
version = "1.0.0"
dependencies = ["pyside6", "pillow", "scikit-image"]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
"src"
]
testpaths = [
"tests"
]
python_files="*.py"

[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.xml]
output = "coverage.xml"
